--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1969,10 +1969,270 @@
         </div>
       </div>
     </details>
-  </section>
-</section>
 
-                
+                <!-- Madde 48 -->
+    <details id="madde-48" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 48 – Çalışma ve Sözleşme Hürriyeti
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Herkes, dilediği alanda çalışma ve sözleşme hürriyetlerine sahiptir. Özel teşebbüsler kurmak serbesttir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Devlet, özel teşebbüslerin milli ekonominin gereklerine ve sosyal amaçlara uygun yürümesini, güvenlik ve kararlılık içinde çalışmasını sağlayacak tedbirleri alır.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Ekonomik Özgürlük ve Devletin Dengeleyici Rolü</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, ekonomik hayatın iki temel taşını güvence altına alır:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Çalışma Hürriyeti:</strong> Kimse, mesleğini seçmede zorlanamaz.</li>
+            <li><strong>Sözleşme Hürriyeti:</strong> Şirket, dükkan, fabrika açma serbestisi.</li>
+          </ul>
+          <p style="text-align: justify;" class="text-sm mt-2">Ancak bu özgürlükler sınırsız değildir. Devlet, özel sektörün milli ekonomi ve sosyal adaletle uyumlu hareket etmesini sağlama görevindedir. Bu, Sosyal Devlet ilkesinin bir gereğidir.</p>
+        </div>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Analoji: Devlet, Oyun Parkı Gözetmeni Gibidir</h6>
+          <p style="text-align: justify;" class="text-sm">Devlet, “İstediğiniz oyunu oynayın” der (özgürlük), ama “Birbirinize zarar vermeyin, kurallara uyun” diye de düzeni sağlar (tedbir alma görevi).</p>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 49 -->
+    <details id="madde-49" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 49 – Çalışma Hakkı ve Ödevi
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Çalışma, herkesin hakkı ve ödevidir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Devlet, çalışanların hayat seviyesini yükseltmek, çalışma hayatını geliştirmek için çalışanları ve işsizleri korumak, çalışmayı desteklemek, işsizliği önlemeye elverişli ekonomik bir ortam yaratmak ve çalışma barışını sağlamak için gerekli tedbirleri alır.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Çalışma, Hem Hak Hem Ödev</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, çalışmayı hem bir <strong>hak</strong> hem bir <strong>ödev</strong> olarak tanımlar. “Hak” olması, devletin bu alanda <strong>olumlu görevleri</strong> olduğunu gösterir:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li>Çalışanların ve <strong>işsizlerin</strong> korunması,</li>
+            <li>İşsizliği önleyecek ekonomik ortamın yaratılması,</li>
+            <li>Çalışma barışının sağlanması.</li>
+          </ul>
+        </div>
+
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Devletin Pozitif Görevleri</h6>
+          <p style="text-align: justify;" class="text-sm">Sınavlarda “Devletin çalışma alanında görevleri nelerdir?” sorusu sık gelir. Doğru cevaplar:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li>İşsizleri korumak,</li>
+            <li>İşsizliği önleyecek ekonomik ortam yaratmak,</li>
+            <li>Çalışma barışını sağlamak.</li>
+          </ul>
+          <p class="text-sm mt-2"><strong>Çeldirici:</strong> “Devlet, herkese iş bulmak zorundadır.” → Yanlış. Devlet, <strong>ortam yaratır</strong>, doğrudan iş vermez.</p>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 50 -->
+    <details id="madde-50" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 50 – Çalışma Şartları ve Dinlenme Hakkı
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Kimse, yaşına, cinsiyetine ve gücüne uymayan işlerde çalıştırılamaz.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Küçükler ve kadınlar ile bedeni ve ruhi yetersizliği olanlar çalışma şartları bakımından özel olarak korunurlar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Dinlenmek, çalışanların hakkıdır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Ücretli hafta ve bayram tatili ile ücretli yıllık izin hakları ve şartları kanunla düzenlenir.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: "İnsana Yakışır İş" İlkesi</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, çalışma hayatının temel ilkelerini düzenler:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Kişisellik İlkesi:</strong> İş, bireyin yaş, cinsiyet ve gücüne uygun olmalıdır.</li>
+            <li><strong>Pozitif Ayrımcılık:</strong> Kadın, çocuk, engelli gibi gruplar özel korumaya alınmıştır.</li>
+            <li><strong>Dinlenme Hakkı:</strong> Emek, dinlenmeyi gerektirir. Bu hak, ücretli izinlerle somutlaştırılır.</li>
+          </ul>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 51 -->
+    <details id="madde-51" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 51 – Sendika Kurma Hakkı
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Çalışanlar ve işverenler, üyelerinin çalışma ilişkilerinde, ekonomik ve sosyal hak ve menfaatlerini korumak ve geliştirmek için önceden izin almaksızın sendikalar ve üst kuruluşlar kurma, bunlara serbestçe üye olma ve üyelikten serbestçe çekilme haklarına sahiptir. Hiç kimse bir sendikaya üye olmaya ya da üyelikten ayrılmaya zorlanamaz.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Sendika kurma hakkı ancak, millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâk ile başkalarının hak ve özgürlüklerinin korunması sebepleriyle ve kanunla sınırlanabilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Sendika kurma hakkının kullanılmasında uygulanacak şekil, şart ve usuller kanunda gösterilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          İşçi niteliği taşımayan kamu görevlilerinin bu alandaki haklarının kapsam, istisna ve sınırları gördükleri hizmetin niteliğine uygun olarak kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Sendika ve üst kuruluşlarının tüzükleri, yönetim ve işleyişleri, Cumhuriyetin temel niteliklerine ve demokrasi esaslarına aykırı olamaz.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Toplu Gücün Anayasal Temeli</h6>
+          <p style="text-align: justify;" class="text-sm">Sendika kurma hakkı, çalışanların ve işverenlerin toplu güç kazanmasıdır. Temel prensipler:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Ön izin yok:</strong> Devletin onayı gerekmez.</li>
+            <li><strong>Zorunluluk yok:</strong> Üye olmak veya ayrılmak serbesttir.</li>
+            <li><strong>Sınırlama:</strong> Kamu yararı gerekçeleriyle kanunla sınırlandırılabilir.</li>
+          </ul>
+        </div>
+
+        <div class="warning-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Kamu Görevlileri İstisnası</h6>
+          <p style="text-align: justify;" class="text-sm">İşçi olmayan kamu görevlilerinin (örneğin: hakim, savcı, subay) sendikal hakları, hizmetin niteliğine göre <strong>kanunla sınırlandırılabilir</strong>. Bu, güvenlik ve tarafsızlık ilkesinin bir gereğidir.</p>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 53 -->
+    <details id="madde-53" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 53 – Toplu İş Sözleşmesi ve Toplu Sözleşme Hakkı
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          İşçiler ve işverenler, karşılıklı olarak ekonomik ve sosyal durumlarını ve çalışma şartlarını düzenlemek amacıyla toplu iş sözleşmesi yapma hakkına sahiptirler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Toplu iş sözleşmesinin nasıl yapılacağı kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Memurlar ve diğer kamu görevlileri, toplu sözleşme yapma hakkına sahiptirler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Toplu sözleşme yapılması sırasında uyuşmazlık çıkması halinde taraflar Kamu Görevlileri Hakem Kuruluna başvurabilir. Kamu Görevlileri Hakem Kurulu kararları kesindir ve toplu sözleşme hükmündedir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Toplu sözleşme hakkının kapsamı, istisnaları, toplu sözleşmenin yapılma şekli, usulü ve yürürlüğü, toplu sözleşme hükümlerinin emeklilere yansıtılması, Kamu Görevlileri Hakem Kurulunun teşkili, çalışma usul ve esasları ile diğer hususlar kanunla düzenlenir.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: İşçi ile Memur Arasında Hayati Fark</h6>
+          <p style="text-align: justify;" class="text-sm">Anayasa, işçiler ile memurlar arasında net bir ayrım yapar:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>İşçiler:</strong> "Toplu <strong>İş</strong> Sözleşmesi" yapar.</li>
+            <li><strong>Memurlar:</strong> "Toplu Sözleşme" yapar. "İş" kelimesinin olmaması, hukuki statü farkını yansıtır.</li>
+          </ul>
+        </div>
+
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Analiz: İşçi vs. Memur</h6>
+          <table class="w-full border-collapse text-sm bg-white border border-slate-300">
+            <thead>
+              <tr class="bg-slate-100">
+                <th class="border border-slate-300 p-2 text-left">Kriter</th>
+                <th class="border border-slate-300 p-2 text-left">İşçiler</th>
+                <th class="border border-slate-300 p-2 text-left">Memurlar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="border border-slate-300 p-2">Sözleşme Türü</td>
+                <td class="border border-slate-300 p-2">Toplu <strong>İş</strong> Sözleşmesi</td>
+                <td class="border border-slate-300 p-2">Toplu Sözleşme</td>
+              </tr>
+              <tr class="bg-slate-50">
+                <td class="border border-slate-300 p-2">Grev Hakkı</td>
+                <td class="border border-slate-300 p-2">Var</td>
+                <td class="border border-slate-300 p-2">Anayasa'da yok</td>
+              </tr>
+              <tr>
+                <td class="border border-slate-300 p-2">Uyuşmazlık Çözümü</td>
+                <td class="border border-slate-300 p-2">Yüksek Hakem Kurulu</td>
+                <td class="border border-slate-300 p-2">Kamu Görevlileri Hakem Kurulu</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 54 -->
+    <details id="madde-54" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 54 – Grev Hakkı ve Lokavt
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Toplu iş sözleşmesinin yapılması sırasında, uyuşmazlık çıkması halinde işçiler grev hakkına sahiptirler. Bu hakkın kullanılmasının ve işverenin lokavta başvurmasının usul ve şartları ile kapsam ve istisnaları kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Grev hakkı ve lokavt iyiniyet kurallarına aykırı tarzda, toplum zararına ve milli serveti tahrip edecek şekilde kullanılamaz.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Grev ve lokavtın yasaklanabileceği veya ertelenebileceği haller ve işyerleri kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Grev ve lokavtın yasaklandığı hallerde veya ertelendiği durumlarda ertelemenin sonunda, uyuşmazlık Yüksek Hakem Kurulunca çözülür. Uyuşmazlığın her safhasında taraflar da anlaşarak Yüksek Hakem Kuruluna başvurabilir. Yüksek Hakem Kurulunun kararları kesindir ve toplu iş sözleşmesi hükmündedir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Greve katılmayanların işyerinde çalışmaları, greve katılanlar tarafından hiç bir şekilde engellenemez.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Grev – İşçinin Son Silahı</h6>
+          <p style="text-align: justify;" class="text-sm">Grev, işçilerin toplu olarak işi bırakma hakkıdır. Ancak bu hak:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li>Sadece <strong>toplu iş sözleşmesi</strong> görüşmelerinde uyuşmazlık varsa kullanılabilir.</li>
+            <li><strong>Yasaklanabilir veya ertelenebilir</strong> (örneğin: kamu hizmetlerinde).</li>
+            <li><strong>Yüksek Hakem Kurulu</strong> kararı kesindir.</li>
+          </ul>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 55 -->
+    <details id="madde-55" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 55 – Ücrette Adalet Sağlanması
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Ücret emeğin karşılığıdır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Devlet, çalışanların yaptıkları işe uygun adaletli bir ücret elde etmeleri ve diğer sosyal yardımlardan yararlanmaları için gerekli tedbirleri alır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Asgarî ücretin tespitinde çalışanların geçim şartları ile ülkenin ekonomik durumu da gözönünde bulundurulur.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Ücret, Emekten Kaynaklanır</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, ücretin adaletli olmasının anayasal temelidir:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Ücret = Emek karşılığıdır.</strong></li>
+            <li><strong>Devletin görevi:</strong> Adaletli ücret ve sosyal yardım için tedbir almak.</li>
+            <li><strong>Asgari ücret:</strong> Çalışanın geçimi ve ekonomik durum birlikte değerlendirilir.</li>
+          </ul>
+        </div>
+      </div>
+    </details>
+
+</section>
+ 
             </article>
         </div>
     </main>
