--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -302,7 +302,7 @@
             Devlet organları ve idare makamları bütün işlemlerinde kanun önünde eşitlik ilkesine uygun olarak hareket etmek zorundadırlar.
         </blockquote>
         <div class="warning-box mt-4">
-            <p style="text-align: justify;"><strong>💡 Anlamlandırma Kutusu (Pozitif Ayrımcılık):</strong> Devletin, dezavantajlı olduğu kabul edilen bazı gruplara (çocuklar, yaşlılar, engelliler vb.) yönelik ek haklar veya koruyucu önlemler alması, eşitlik ilkesini bozmaz. Aksine, bu durum kağıt üzerindeki "şekli eşitliğin" ötesine geçerek, gerçek hayatta **"fırsat eşitliğini" (fiili eşitliği)** sağlama amacı taşır. Buna <strong>pozitif ayrımcılık</strong> denir.</p>
+            <p style="text-align: justify;"><strong>💡 Anlamlandırma Kutusu (Pozitif Ayrımcılık):</strong> Devletin, dezavantajlı olduğu kabul edilen bazı gruplara (çocuklar, yaşlılar, engelliler vb.) yönelik ek haklar veya koruyucu önlemler alması, eşitlik ilkesini bozmaz. Aksine, bu durum kağıt üzerindeki "şekli eşitliğin" ötesine geçerek, gerçek hayatta <strong>"fırsat eşitliğini" (fiili eşitliği)</strong> sağlama amacı taşır. Buna <strong>pozitif ayrımcılık</strong> denir.</p>
         </div>
     </div>
 </details>
@@ -366,6 +366,115 @@
         </div>
     </div>
 </details>
+</section>
+
+<!-- Bölüm Özeti -->
+<div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600 highlight-box" role="mark">
+    <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">✅</span> Genel Esaslar - Bölüm Özeti
+    </h4>
+    <p class="text-green-900 mb-4" style="text-align: justify;">
+        Bu bölümde devletin temel DNA'sını ve anayasal sistemin iskeletini öğrendik. İşte unutmamanız gerekenler:
+    </p>
+    <ul class="list-none space-y-3">
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🏛️</span>
+            <div>
+                <strong>Devletin Çekirdek Kimliği:</strong> Devletin şekli <strong>Cumhuriyet'tir</strong>. "İLAHİD-S" olarak kodladığımız 7 temel niteliği, 5 temel sembolü (bütünlük, dil, bayrak, marş, başkent) bulunur ve bu ilk üç madde <strong>değiştirilemez, teklif dahi edilemez</strong>.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">📜</span>
+            <div>
+                <strong>Devletin Görevleri ve Egemenlik:</strong> Devletin 4 temel görevi (Koru, Sağla, Kaldır, Hazırla) vardır. Egemenlik kayıtsız şartsız <strong>Milletindir</strong> ve Millet bu hakkı <strong>yetkili organlar</strong> (Yasama, Yürütme, Yargı) eliyle kullanır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">⚖️</span>
+            <div>
+                <strong>Hukukun Temel İlkeleri:</strong> Anayasa, <strong>kuvvetler ayrılığı</strong>, <strong>kanun önünde eşitlik</strong> (pozitif ayrımcılık dahil) ve en tepede kendisinin olduğu <strong>normlar hiyerarşisi</strong> ilkelerini benimser.
+            </div>
+        </li>
+    </ul>
+</div>
+
+<!-- Bölüm Sonu Testi -->
+<div class="mt-12 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg strategy-box" role="region">
+    <h4 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
+        <span class="mr-3 text-2xl">🧪</span> Genel Esaslar - Tekrar Testi
+    </h4>
+    <div class="space-y-6">
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3">
+                <span class="mr-2">1.</span>
+                <div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Boşluk Doldurma</div>
+            </div>
+            <p class="text-slate-700 text-lg">Yasama yetkisi Türk Milleti adına Türkiye Büyük Millet Meclisinindir. Bu yetki ..................... .</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3">
+                <span class="mr-2">2.</span>
+                <div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Çoktan Seçmeli</div>
+            </div>
+            <p class="text-slate-700 mb-3 text-lg">Aşağıdakilerden hangisi Anayasa'da sayılan Cumhuriyetin niteliklerinden biri <strong>değildir</strong>?</p>
+            <div class="text-slate-600 space-y-2">
+                <div class="flex items-center"><span class="mr-3 font-bold">a)</span> İnsan haklarına saygılı devlet</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">b)</span> Hukuk devleti</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">c)</span> Üniter devlet</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">d)</span> Sosyal devlet</div>
+            </div>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3">
+                <span class="mr-2">3.</span>
+                <div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Kavram</div>
+            </div>
+            <p class="text-slate-700 text-lg">Devletin, engelliler ve yaşlılar gibi gruplara yönelik ek koruyucu tedbirler almasının eşitlik ilkesine aykırı sayılmaması, hangi anayasal kavramı ifade eder?</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3">
+                <span class="mr-2">4.</span>
+                <div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Doğru / Yanlış</div>
+            </div>
+            <p class="text-slate-700 text-lg">Anayasanın ilk üç maddesi değiştirilemez ancak değiştirilmesi için kanun teklifi verilebilir. (<strong>D / Y</strong>)</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3">
+                <span class="mr-2">5.</span>
+                <div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Analiz</div>
+            </div>
+            <p class="text-slate-700 text-lg">Anayasanın üstünlüğü ve normlar hiyerarşisi ilkesi, kuvvetler ayrılığı ilkesini nasıl etkiler? Kısaca açıklayınız.</p>
+        </div>
+    </div>
+    <details class="mt-6">
+        <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+        <div class="mt-3 p-6 bg-slate-50 rounded-lg border border-slate-200">
+            <div class="divide-y divide-slate-200">
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">1</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>devredilemez</strong>.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">2</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>c) Üniter devlet</strong>. Üniter devlet yapısı Anayasa'nın genel ruhundan ve "bölünmez bütünlük" ilkesinden çıksa da, Cumhuriyetin nitelikleri arasında açıkça sayılan bir ifade değildir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">3</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Pozitif Ayrımcılık</strong>.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">4</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Yanlış</strong>. Anayasa, bu hükümlerin değiştirilmesinin <strong>teklif dahi edilemeyeceğini</strong> açıkça belirtir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">5</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> Normlar Hiyerarşisi, kuvvetler ayrılığı ilkesiyle ayrılan tüm yetkilerin (Yasama, Yürütme, Yargı) üzerinde bir denetim mekanizması kurar. Yani, yasama organı (TBMM) kanun yaparken, yürütme organı (CB) görevini yerine getirirken ve yargı organları (Mahkemeler) karar verirken, hepsi en üst norm olan <strong>Anayasa'ya uymak zorundadır</strong>. Bu durum, yetkilerin keyfi kullanılmasını önler ve "hukuk devleti" ilkesini güvence altına alır.</p></div>
+                </div>
+            </div>
+        </div>
+    </details>
+</div>```
+
                 <!-- İKİNCİ KISIM: Temel Haklar ve Ödevler -->
 <h2 id="ikinci-kisim" class="section-title mt-16 mb-6">
     İKİNCİ KISIM: Temel Haklar ve Ödevler
