--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -398,12 +398,13 @@
     </ul>
 </div>
 
-<!-- Bölüm Sonu Testi -->
+!-- Bölüm Sonu Testi -->
 <div class="mt-12 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg strategy-box" role="region">
     <h4 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
         <span class="mr-3 text-2xl">🧪</span> Genel Esaslar - Tekrar Testi
     </h4>
     <div class="space-y-6">
+        <!-- Test Soruları Buraya Geliyor -->
         <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
             <div class="flex items-center text-sky-800 font-bold mb-3">
                 <span class="mr-2">1.</span>
@@ -473,6 +474,9 @@
             </div>
         </div>
     </details>
+</div>
+</section> <!-- BU, BİRİNCİ KISIM: GENEL ESASLAR'ı BİTİREN SECTION ETİKETİDİR -->
+
 <!-- İKİNCİ KISIM: Temel Haklar ve Ödevler -->
 <h2 id="ikinci-kisim" class="section-title mt-16 mb-6">
     İKİNCİ KISIM: Temel Haklar ve Ödevler
