--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -2205,6 +2205,226 @@
   </div>
 </details>
 
+                <!-- Madde 56 -->
+<details id="madde-56" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 56 – Sağlık Hizmetleri ve Çevrenin Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Herkes, <strong>sağlıklı ve dengeli bir çevrede yaşama hakkına</strong> sahiptir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Çevreyi geliştirmek, çevre sağlığını korumak ve çevre kirlenmesini önlemek <strong>Devletin ve vatandaşların ödevidir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet, herkesin hayatını, beden ve ruh sağlığı içinde sürdürmesini sağlamak; insan ve madde gücünde tasarruf ve verimi artırarak, işbirliğini gerçekleştirmek amacıyla sağlık kuruluşlarını <strong>tek elden planlayıp</strong> hizmet vermesini düzenler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet, bu görevini kamu ve özel kesimlerdeki sağlık ve sosyal kurumlarından yararlanarak, onları denetleyerek yerine getirir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Sağlık hizmetlerinin yaygın bir şekilde yerine getirilmesi için kanunla <strong>genel sağlık sigortası kurulabilir.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Ortak Sorumluluk</h6>
+            <p style="text-align: justify;" class="text-sm">Sınavlarda, "Aşağıdakilerden hangisi hem Devletin hem de vatandaşın ödevidir?" sorusunun cevabı genellikle **çevreyi korumaktır**. Bu ortak sorumluluk vurgusu, sınavlar için kilit bir bilgidir. Ayrıca, "Genel Sağlık Sigortası"nın kurulabileceğinin anayasal dayanağı da bu maddedir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 57 -->
+<details id="madde-57" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 57 – Konut Hakkı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, şehirlerin özelliklerini ve çevre şartlarını gözeten bir planlama çerçevesinde, <strong>konut ihtiyacını karşılayacak tedbirleri alır</strong>, ayrıca <strong>toplu konut teşebbüslerini destekler.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: İki Farklı Konut Güvencesi</h6>
+            <p style="text-align: justify;" class="text-sm">Konut hakkı, "negatif statü hakkı" olan <strong>Konut Dokunulmazlığı (Madde 21)</strong> ile karıştırılmamalıdır. Madde 21, Devletin konuta müdahale etmemesini (gölge etme) sağlarken; bu madde (Madde 57), Devletin konut ihtiyacını karşılamak için <strong>aktif olarak faaliyette bulunmasını</strong> (tedbir al, destekle) öngören bir "pozitif statü hakkı" yani bir "isteme hakkı"dır. Devlet bu görevini TOKİ gibi kurumlar aracılığıyla yerine getirir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 58 -->
+<details id="madde-58" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 58 – Gençliğin Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, istiklal ve Cumhuriyetimizin emanet edildiği gençlerin müsbet ilmin ışığında, Atatürk ilke ve inkılapları doğrultusunda ve Devletin ülkesi ve milletiyle bölünmez bütünlüğünü ortadan kaldırmayı amaç edinen görüşlere karşı yetişme ve gelişmelerini sağlayıcı tedbirleri alır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet, gençleri <strong>alkol düşkünlüğünden, uyuşturucu maddelerden, suçluluk, kumar ve benzeri kötü alışkanlıklardan ve cehaletten korumak</strong> için gerekli tedbirleri alır.
+        </blockquote>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Devletin Gençliği Koruma Alanları</h6>
+            <p style="text-align: justify;" class="text-sm">Sınavda "Aşağıdakilerden hangisi Devletin gençliği koruma görevi kapsamında değildir?" şeklinde bir soru gelebilir. Anayasa metninde sayılanlar şunlardır:
+            <ul class="list-disc pl-5 mt-2 space-y-1 text-sm">
+                <li>Alkol düşkünlüğü</li>
+                <li>Uyuşturucu maddeler</li>
+                <li>Suçluluk</li>
+                <li>Kumar ve benzeri kötü alışkanlıklar</li>
+                <li>Cehalet (Bilgisizlik)</li>
+            </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 59 -->
+<details id="madde-59" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 59 – Sporun Geliştirilmesi ve Tahkim
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, her yaştaki Türk vatandaşlarının beden ve ruh sağlığını geliştirecek tedbirleri alır, <strong>sporun kitlelere yayılmasını teşvik eder.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet <strong>başarılı sporcuyu korur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Spor federasyonlarının spor faaliyetlerinin yönetimine ve disiplinine ilişkin kararlarına karşı ancak <strong>zorunlu tahkim yoluna başvurulabilir.</strong> Tahkim kurulu kararları <strong>kesin olup bu kararlara karşı hiçbir yargı merciine başvurulamaz.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Devletin sporla ilgili iki temel görevi vardır: **teşvik etmek** ve **korumak**. Herkes için sporun yaygınlaşmasını teşvik eder, özel olarak da başarılı sporcuyu korur. Maddenin en teknik ve sınavlar için en önemli kısmı ise spor uyuşmazlıklarının çözüm yoludur. Normalde bir uyuşmazlık için mahkemeye gidilirken, spor federasyonlarının kararlarına karşı kural olarak **zorunlu tahkim** (özel hakemlik) yolu öngörülmüştür. Tahkim kararları kesindir ve yargı yolu kapalıdır.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 60 -->
+<details id="madde-60" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 60 – Sosyal Güvenlik Hakkı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        <strong>Herkes, sosyal güvenlik hakkına sahiptir.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, bu güvenliği sağlayacak <strong>gerekli tedbirleri alır ve teşkilatı kurar.</strong>
+      </blockquote>
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, sosyal devletin en temel vaatlerinden birini içerir. Oldukça kısa ve nettir:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Evrensellik:</strong> Herkes, istisnasız bir şekilde sosyal güvenlik hakkına sahiptir. Bu, sadece çalışanları değil, tüm vatandaşları kapsayan bir şemsiye haktır.</li>
+            <li><strong>Devletin Aktif Görevi:</strong> Devlet, bu güvenliği sağlamak için sadece soyut bir söz vermez; gerekli tedbirleri almak ve teşkilatı kurmakla (SGK gibi) doğrudan yükümlüdür. Bu, klasik bir pozitif statü (isteme) hakkıdır.</li>
+        </ul>
+      </div>
+    </div>
+</details>
+
+<!-- Madde 61 -->
+<details id="madde-61" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 61 – Sosyal Güvenlik Bakımından Özel Olarak Korunması Gerekenler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet <strong>harp ve vazife şehitlerinin dul ve yetimleriyle, malûl ve gazileri, sakatları, yaşlıları ve korunmaya muhtaç çocukları</strong> korur ve toplumda kendilerine yaraşır bir hayat seviyesi sağlar.
+      </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, sakatların korunmalarını ve toplum hayatına intibaklarını sağlayıcı tedbirleri alır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Yaşlılar, Devletçe korunur, Yaşlılara Devlet yardımı ve sağlanacak diğer haklar ve kolaylıklar kanunla düzenlenir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, korunmaya muhtaç çocukların topluma kazandırılması için her türlü tedbiri alır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Bu amaçlarla gerekli teşkilat ve tesisleri kurar veya kurdurur.
+      </blockquote>
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Özel Koruma Listesi</h6>
+        <p style="text-align: justify;" class="text-sm">Sınavda, "Aşağıdakilerden hangisi Anayasa'ya göre sosyal güvenlik bakımından özel olarak korunması gereken gruplardan biri değildir?" sorusu standarttır. Bu listeyi mutlaka bilin:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li>Harp ve vazife şehitlerinin dul ve yetimleri</li>
+          <li>Malûl ve gaziler</li>
+          <li>Sakatlar (Engelliler)</li>
+          <li>Yaşlılar</li>
+          <li>Korunmaya muhtaç çocuklar</li>
+        </ul>
+      </div>
+    </div>
+</details>
+
+<!-- Madde 62 -->
+<details id="madde-62" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 62 – Yabancı Ülkelerde Çalışan Türk Vatandaşları
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet, yabancı ülkelerde çalışan Türk vatandaşlarının <strong>aile birliğinin, çocuklarının eğitiminin, kültürel ihtiyaçlarının ve sosyal güvenliklerinin sağlanması</strong>, anavatanla bağlarının korunması ve yurda dönüşlerinde yardımcı olunması için gereken tedbirleri alır.
+      </blockquote>
+      <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, devletin sınırları dışındaki vatandaşlarına ("gurbetçiler") karşı olan sosyal görevlerini düzenler. Devlet, yurt dışında çalışan vatandaşlarımızın sorunlarıyla ilgilenmek ve onlara destek olmakla yükümlüdür.</p>
+      </div>
+    </div>
+</details>
+
+<!-- Madde 63 -->
+<details id="madde-63" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 63 – Tarih, Kültür ve Tabiat Varlıklarının Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet, tarih, kültür ve tabiat varlıklarının ve değerlerinin <strong>korunmasını sağlar</strong>, bu amaçla <strong>destekleyici ve teşvik edici tedbirleri alır.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Bu varlıklar ve değerlerden özel mülkiyet konusu olanlara getirilecek sınırlamalar ve bu nedenle hak sahiplerine yapılacak yardımlar ve tanınacak muafiyetler kanunla düzenlenir.
+      </blockquote>
+      <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Sınav için en önemli nokta ikinci fıkradır. Eğer korunacak bir varlık (tarihi bir konak, sit alanı vb.) özel mülkiyette ise, devlet bu mülkiyete kamu yararı için sınırlamalar getirebilir. Ancak bu durumda, hak sahibine yapılacak yardımlar veya tanınacak muafiyetler (vergi indirimi gibi) de yine kanunla düzenlenir. Bu, kamu yararı ile mülkiyet hakkı arasındaki dengeyi gösterir.</p>
+      </div>
+    </div>
+</details>
+
+<!-- Madde 64 -->
+<details id="madde-64" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 64 – Sanatın ve Sanatçının Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet, <strong>sanat faaliyetlerini ve sanatçıyı korur.</strong> Sanat eserlerinin ve sanatçının korunması, değerlendirilmesi, desteklenmesi ve sanat sevgisinin yayılması için gereken tedbirleri alır.
+      </blockquote>
+       <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, Madde 27'de güvence altına alınan "bilim ve sanat hürriyetini" tamamlar. Madde 27, devlete "karışma" derken (negatif hak), bu madde devlete "destek ol" emri verir (pozitif hak).</p>
+      </div>
+    </div>
+</details>
+
+<!-- Madde 65 -->
+<details id="madde-65" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 65 – Devletin İktisadi ve Sosyal Ödevlerinin Sınırları
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet, sosyal ve ekonomik alanlarda Anayasa ile belirlenen görevlerini, bu görevlerin amaçlarına uygun öncelikleri gözeterek <strong>malî kaynaklarının yeterliliği ölçüsünde</strong> yerine getirir.
+      </blockquote>
+      <div class="warning-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Tüm Sosyal Hakların "Fren Mekanizması"</h6>
+        <p style="text-align: justify;" class="text-sm mb-3">Bu madde, şimdiye kadar gördüğümüz tüm Sosyal ve Ekonomik Hakların (Madde 41'den itibaren) nasıl hayata geçirileceğinin anahtarını verir ve sınavlar için HAYATİ öneme sahiptir.</p>
+        <p style="text-align: justify;" class="text-sm">Bu madde der ki: "Devlet, Anayasa'da sayılan eğitim, sağlık, konut, sosyal güvenlik gibi tüm sosyal görevlerini, <strong>malî kaynaklarının yeterliliği ölçüsünde</strong> yerine getirir."</p>
+        <p style="text-align: justify;" class="text-sm mt-2">Bu ilke, sosyal hakların, devletin ekonomik gücüyle sınırlı olduğunu ve zaman içinde, kaynaklar arttıkça daha iyi bir şekilde yerine getirileceğini ifade eder. Bu, "sosyal hakların zamanla gerçekleşmesi" ilkesidir.</p>
+    </div>
+</details>
+
+
+
+                
 </section>
  
             </article>
