--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -2421,7 +2421,129 @@
         <p style="text-align: justify;" class="text-sm mt-2">Bu ilke, sosyal hakların, devletin ekonomik gücüyle sınırlı olduğunu ve zaman içinde, kaynaklar arttıkça daha iyi bir şekilde yerine getirileceğini ifade eder. Bu, "sosyal hakların zamanla gerçekleşmesi" ilkesidir.</p>
     </div>
 </details>
+<!-- Bölüm Özeti -->
+<div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600 highlight-box" role="mark">
+    <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">✅</span> Sosyal ve Ekonomik Haklar - Bölüm Özeti
+    </h4>
+    <p class="text-green-900 mb-4" style="text-align: justify;">
+        Bu bölümde, devletin "gölge etme" rolünden çıkıp, vatandaşı için aktif olarak hizmet sunma, teşkilat kurma ve tedbir alma rolüne büründüğü <strong>Pozitif Statü (İsteme) Haklarını</strong> inceledik. Temel çıkarımlarımız şunlar:
+    </p>
+    <ul class="list-none space-y-3">
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🏛️</span>
+            <div>
+                <strong>Temel Felsefe:</strong> Bu bölümdeki hakların tamamı, Anayasa'nın 2. maddesinde belirtilen <strong>"sosyal devlet"</strong> ilkesinin bir yansımasıdır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">👪</span>
+            <div>
+                <strong>Aile, Çocuk ve Eğitim:</strong> Aile, toplumun temeli kabul edilmiş ve <strong>eşler arasında eşitlik</strong> ilkesi getirilmiştir. <strong>İlköğretim</strong>, tüm vatandaşlar için zorunlu ve devlet okullarında parasızdır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">💼</span>
+            <div>
+                <strong>Çalışma Hayatı:</strong> Sendika kurma hakkı izne tabi değilken, toplu pazarlık mekanizmaları <strong>işçiler</strong> (Toplu İş Sözleşmesi, Grev, Yüksek Hakem Kurulu) ve <strong>memurlar</strong> (Toplu Sözleşme, Kamu Görevlileri Hakem Kurulu) için farklı düzenlenmiştir.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🏞️</span>
+            <div>
+                <strong>Kamu Yararı ve Mülkiyet:</strong> Devlet, kamu yararı için özel mülkiyete müdahale edebilir. Bu müdahale, taşınmaz mallar için <strong>Kamulaştırma</strong>, kamu hizmeti gören özel teşebbüsler için ise <strong>Devletleştirme</strong> yoluyla olur. Unutmayın, devletleştirme için kamu yararının <strong>"zorunlu"</strong> olması gerekir.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🏥</span>
+            <div>
+                <strong>Sosyal Devletin Hizmetleri:</strong> Çevrenin korunmasının hem <strong>devletin hem de vatandaşın ödevi</strong> olduğu, spor uyuşmazlıklarında ise <strong>zorunlu tahkimin</strong> geçerli olduğu unutulmamalıdır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">💰</span>
+            <div>
+                <strong>Altın Kural (Bütçe Sınırı):</strong> Tüm bu sosyal ve ekonomik görevler, devletin <strong>"malî kaynaklarının yeterliliği"</strong> ilkesiyle sınırlıdır (Madde 65). Bu, söz konusu hakların mutlak olmadığını ifade eden en önemli kuraldır.
+            </div>
+        </li>
+    </ul>
+</div>
 
+<!-- Hafıza Teknikleri Özeti -->
+<div class="mt-12 p-6 bg-blue-50 rounded-lg border-l-4 border-blue-500">
+    <h4 class="font-bold text-blue-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">🧠</span> Bu Bölümden Akılda Kalanlar
+    </h4>
+    <ul class="list-none space-y-2 text-sm text-blue-900">
+        <li><strong>Hak Kategorileri:</strong> Kişinin Hakları = "Dokunma!", Sosyal Haklar = "Yap!".</li>
+        <li><strong>İşçi vs. Memur:</strong> TİS / TS, Grev Var / Yok, YHK / KGHK.</li>
+        <li><strong>Tarım (Madde 45):</strong> KORU (araziyi), DESTEKLE (çiftçiyi), DEĞERLENDİR (ürünü).</li>
+        <li><strong>Kamulaştırma vs. Devletleştirme:</strong> Kamulaştırma arsaya, Devletleştirme şirkete yapılır.</li>
+        <li><strong>Sosyal Ödevlerin Sınırı (Madde 65):</strong> "Bütçe Kuralı". Devletin imkanı ölçüsünde...</li>
+    </ul>
+</div>
+
+<!-- Bölüm Sonu Testi -->
+<div class="mt-12 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg strategy-box" role="region">
+    <h4 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
+        <span class="mr-3 text-2xl">🧪</span> Sosyal ve Ekonomik Haklar - Tekrar Testi
+    </h4>
+    <div class="space-y-6">
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">1.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Çoktan Seçmeli</div></div>
+            <p class="text-slate-700 mb-3 text-lg">Anayasa'ya göre, toplu sözleşme görüşmeleri sırasında uyuşmazlık çıkması halinde memurlar ve diğer kamu görevlileri aşağıdaki kurullardan hangisine başvurur?</p>
+            <div class="text-slate-600 space-y-2">
+                <div class="flex items-center"><span class="mr-3 font-bold">a)</span> Yüksek Hakem Kurulu</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">b)</span> Danıştay</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">c)</span> Kamu Denetçiliği Kurumu</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">d)</span> Kamu Görevlileri Hakem Kurulu</div>
+            </div>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">2.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Doğru / Yanlış</div></div>
+            <p class="text-slate-700 text-lg">Anayasa'ya göre, çevreyi geliştirmek ve çevre kirlenmesini önlemek sadece Devletin görevidir. (<strong>D / Y</strong>)</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">3.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Boşluk Doldurma</div></div>
+            <p class="text-slate-700 text-lg">Devletin, kamu yararının gerektirdiği hallerde, gerçek karşılıklarını peşin ödemek şartıyla özel mülkiyette bulunan taşınmaz malların tamamına veya bir kısmına el koymasına ............................. denir.</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">4.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Kavram Analizi</div></div>
+            <p class="text-slate-700 text-lg">Anayasa'nın 65. maddesinde yer alan "malî kaynakların yeterliliği" ilkesi ne anlama gelmektedir? Kısaca açıklayınız.</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">5.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Liste</div></div>
+            <p class="text-slate-700 text-lg">Anayasa'nın 50. maddesine göre çalışma şartları bakımından "özel olarak korunması gereken" grupları yazınız.</p>
+        </div>
+    </div>
+    <details class="mt-6">
+        <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+        <div class="mt-3 p-6 bg-slate-50 rounded-lg border border-slate-200">
+            <div class="divide-y divide-slate-200">
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">1</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>d) Kamu Görevlileri Hakem Kurulu</strong>. Yüksek Hakem Kurulu, işçilerle ilgilidir. Memurlar için yetkili uyuşmazlık çözüm mercii Kamu Görevlileri Hakem Kurulu'dur.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">2</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Yanlış</strong>. Madde 56'ya göre çevreyi korumak hem Devletin hem de vatandaşların ödevidir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">3</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Kamulaştırma</strong>. Konusu taşınmaz mal olan ve bedeli kural olarak peşin ödenen işlem kamulaştırmadır.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">4</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> Devletin, Anayasa'da belirtilen sosyal ve ekonomik görevlerini (eğitim, sağlık, konut vb.) bütçe imkanları elverdiği ölçüde yerine getireceği anlamına gelir. Bu ilke, sosyal hakların devlet için mutlak bir yükümlülük olmadığını, ekonomik gerçeklerle dengelendiğini gösterir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">5</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> Küçükler, kadınlar, bedeni ve ruhi yetersizliği olanlar.</p></div>
+                </div>
+            </div>
+        </div>
+    </details>
+</div>
 
 
                 
